--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "from bs4 import BeautifulSoup as bs\n",
     "from splinter import Browser\n",
-    "import requests\n",
-    "import pymongo"
+    "from flask import Flask\n",
+    "from flask_pymongo import PyMongo\n",
+    "import requests"
    ]
   },
   {
@@ -260,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method BaseWebDriver.quit of <splinter.driver.webdriver.chrome.WebDriver object at 0x0000028D710099C8>>"
+       "<bound method BaseWebDriver.quit of <splinter.driver.webdriver.chrome.WebDriver object at 0x0000028D72ABFAC8>>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,30 +323,6 @@
    "source": [
     "mars_tables = soup_facts.find_all('table', class_= 'tablepress tablepress-id-p-mars')\n",
     "mars_tables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FIX\n",
-    "# NEED TO TRANSLATE DATA ABOVE TO HTML EXPORT"
    ]
   },
   {
@@ -450,7 +426,7 @@
     "# print(valles_img)\n",
     "\n",
     "\n",
-    "# browser.quit()\n",
+    "browser.quit()\n",
     "\n",
     "img_list.append(cerb_img)\n",
     "img_list.append(schiap_img)\n",
